Login and JWT implemented

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
+  "ConnectionStrings": {
+    "ConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=CallADoctor;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +13,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
